--- a/layouts/partials/header/basic.html
+++ b/layouts/partials/header/basic.html
@@ -18,9 +18,9 @@
         <nav class="flex space-x-3">
 
             {{ if not .Site.Params.disableTextInHeader | default true }}
-            <a href="{{ "" | relLangURL }}" class="text-base font-medium text-gray-500 hover:text-gray-900">{{
+            <a href="{{ "" | relLangURL }}" class="text-base font-medium text-gray-500 hover:text-gray-900"><code>{{
                 .Site.Title | markdownify
-                | emojify }}</a>
+                | emojify }}.dev /</code></a>
             {{ end }}
 
         </nav>
