--- a/layouts/shortcodes/figure.html
+++ b/layouts/shortcodes/figure.html
@@ -8,11 +8,14 @@
 {{ $href := .Get "href" }}
 {{ $class := .Get "class" }}
 {{ $width := .Get "width" }}
+{{ $center := .Get "center" | default false }}
 {{ $nozoom := .Get "nozoom" | default false }}
 {{ if findRE "^https?" $url.Scheme }}
 <figure>
-  <img class="my-0 rounded-md" src="{{ $url.String }}" alt="{{ $altText }}" width="{{ $width }}" />
-  {{ with $caption }}<figcaption>{{ . | markdownify }}</figcaption>{{ end }}
+  <img class="my-0 rounded-md" src="{{ $url.String }}" alt="{{ $altText }}" width="{{ $width }}" {{ if $center }}
+    style="margin: auto" {{ end }} />
+  {{ with $caption }}<figcaption {{ if $center }} style="text-align: center" {{ end }}>{{ . | markdownify }}
+  </figcaption>{{ end }}
 </figure>
 {{ else }}
 {{ $resource := "" }}
@@ -26,20 +29,22 @@
   {{ with $href }}<a href="{{ . }}">{{ end }}
     {{ if $disableImageOptimization }}
     <img class="my-0 rounded-md{{ if $nozoom }} nozoom{{ end }}" src="{{ .RelPermalink }}" alt="{{ $altText }}"
-      width="{{ $width }}" />
+      width="{{ $width }}" {{ if $center }} style="margin: auto" {{ end }} />
     {{ else }}
     <img class="my-0 rounded-md{{ if $nozoom }} nozoom{{ end }}" srcset="
             {{ (.Resize " 330x").RelPermalink }} 330w, {{ (.Resize "660x" ).RelPermalink }} 660w, {{ (.Resize "1024x"
       ).RelPermalink }} 1024w, {{ (.Resize "1320x" ).RelPermalink }} 2x" src="{{ (.Resize " 660x").RelPermalink }}"
-      alt="{{ $altText }}" width="{{ $width }}" />
+      alt="{{ $altText }}" width="{{ $width }}" {{ if $center }} style="margin: auto" {{ end }} />
     {{ end }}
     {{ if $href }}</a>{{ end }}
-  {{ with $caption }}<figcaption>{{ . | markdownify }}</figcaption>{{ end }}
+  {{ with $caption }}<figcaption {{ if $center }} style="text-align: center" {{ end }}>{{ . | markdownify }}
+  </figcaption>{{ end }}
 </figure>
 {{ else }}
 <figure>
   <img class="my-0 rounded-md{{ if $nozoom }} nozoom{{ end }}" src="{{ $url.String }}" alt="{{ $altText }}" />
-  {{ with $caption }}<figcaption>{{ . | markdownify }}</figcaption>{{ end }}
+  {{ with $caption }}<figcaption {{ if $center }} style="text-align: center" {{ end }}>{{ . | markdownify }}
+  </figcaption>{{ end }}
 </figure>
 {{ end }}
 {{ end }}
