Add multiple footnote fix

--- a/assets/css/compiled/main.css
+++ b/assets/css/compiled/main.css
@@ -5240,6 +5240,11 @@ pre {
   text-underline-offset: 4px;
 }
 
+sup + sup :before {
+	content: ', ';
+	color: white;
+}
+
 /* Gallery Specific Styles */
 
 .grid-w10 {
