--- a/assets/css/compiled/main.css
+++ b/assets/css/compiled/main.css
@@ -127,6 +127,7 @@ Reset links to optimize for opt-in styling instead of opt-out.
 a {
   color: inherit;
   text-decoration: inherit;
+  overflow-wrap: break-word;
 }
 
 /*
