--- a/assets/css/compiled/main.css
+++ b/assets/css/compiled/main.css
@@ -5254,9 +5254,24 @@ sup + sup :before {
 	border-radius: 4px;
 }
 
+:root {
+	--mermaid-edge-background: #1a1a1ac0;
+	--mermaid-edge-color: rgba(var(--color-primary-400)); /* #7b7b7b #00ff73; */
+	--mermaid-edge-edge-color: #5f5f5f;
+}
+
 :is(:where(.dark) .edgeLabel) {
   color: white !important;
-  background-color: #101010 !important;
+  background-color: var(--mermaid-edge-background) !important;
+}
+
+:is(:where(.dark) .flowchart-link) {
+	stroke: var(--mermaid-edge-color) !important;
+}
+
+:is(:where(.dark) .marker) {
+	stroke: var(--mermaid-edge-edge-color) !important;
+	fill: var(--mermaid-edge-color) !important;
 }
 
 
