--- a/assets/css/compiled/main.css
+++ b/assets/css/compiled/main.css
@@ -5254,24 +5254,32 @@ sup + sup :before {
 	border-radius: 4px;
 }
 
-:root {
-	--mermaid-edge-background: #1a1a1ac0;
-	--mermaid-edge-color: rgba(var(--color-primary-400)); /* #7b7b7b #00ff73; */
-	--mermaid-edge-edge-color: #5f5f5f;
+.mermaid {
+	--mermaid-edge-background: #1a1a1ae0;
+	--mermaid-edge-color: rgba(var(--color-primary-400), 1); /* var(--tw-prose-links) #7b7b7b #00ff73; */
+	--mermaid-edge-stroke-color: rgba(var(--color-primary-400), 0.5); /* var(--tw-prose-invert-links) #5f5f5f; */
+	--mermaid-node-background: rgba(var(--color-neutral-300), 1);
+	--mermaid-node-border: rgba(var(--color-neutral-500), 1); /* rgba(var(--color-secondary-400), 1) */
 }
 
-:is(:where(.dark) .edgeLabel) {
+:is(:where(.dark) .mermaid .edgeLabel) {
   color: white !important;
   background-color: var(--mermaid-edge-background) !important;
 }
 
-:is(:where(.dark) .flowchart-link) {
+:is(:where(.dark) .mermaid .flowchart-link) {
 	stroke: var(--mermaid-edge-color) !important;
 }
 
-:is(:where(.dark) .marker) {
-	stroke: var(--mermaid-edge-edge-color) !important;
+:is(:where(.dark) .mermaid .marker) {
+	stroke: var(--mermaid-edge-stroke-color) !important;
 	fill: var(--mermaid-edge-color) !important;
+}
+
+:is(:where(.dark) .mermaid .node rect) {
+	fill: var(--mermaid-node-background) !important;
+    stroke: var(--mermaid-node-border) !important;
+    stroke-width: 1px;
 }
 
 
